--- a/firstproject/src/main/resources/templates/greetings.mustache
+++ b/firstproject/src/main/resources/templates/greetings.mustache
@@ -1,11 +1,6 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>{{username}}님, 반갑습니다.</h1>
-</body>
-</html>
+{{>layouts/header}}
+    <!-- content -->
+    <div class="bg-dark text-white p-5" >
+        <h1>{{username}}님, 반갑습니다!</h1>
+    </div>
+{{>layouts/footer}}
