--- a/board/src/main/resources/templates/board/write.html
+++ b/board/src/main/resources/templates/board/write.html
@@ -1,15 +1,5 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="UTF-8">
-		<title>The page is a write page</title>
-	</head>
-	<body>
-		<h2>Welcome Spring Boot!</h2>
-		<div>
-			<span th:text="${t}">여기는 제목입니다.</span>
-			<span th:text="${c}">여기는 내용입니다.</span>
-			<span th:text="${w}">여기는 작성자입니다.</span>
-		</div>
-	</body>
+<html lang="ko" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+	<head th:replace="board/fragments/header :: main-head"> </head>
+	<body th:replace="board/fragments/body :: main-body"> </body>
 </html>
