--- a/board/src/main/resources/templates/board/view.html
+++ b/board/src/main/resources/templates/board/view.html
@@ -86,4 +86,28 @@
 		</div>
 		<!-- /.box-content -->
 	</th:block>
+
+	<th:block layout:fragment="script">
+		<script th:inline="javascript">
+			/*<![CDATA[*/
+
+			function deleteBoard(idx) {
+
+				if (confirm(idx + "번 게시글을 삭제할까요?")) {
+					var uri = /*[[ @{/board/delete.do} ]]*/;
+					var html = "";
+
+					html += '<form name="dataForm" action="'+uri+'" method="post">';
+						html += '<input type="hidden" name="idx" value="'+idx+'" />';
+					html += '</form>';
+
+					$("body").append(html);
+					document.dataForm.submit();
+				}
+			}
+			/*[- end of function -]*/
+
+			/*]]>*/
+		</script>
+	</th:block>
 </html>
