--- a/board/src/main/resources/templates/board/view.html
+++ b/board/src/main/resources/templates/board/view.html
@@ -68,15 +68,15 @@
 					</div>
 					<ul class="notice-list">
 						<li>
-							<span class="name">Betty Simmons</span>
-							<span class="desc">There are new settings available</span>
-							<span class="time">2019.03.26</span>
+							<span class="name">이두희</span>
+							<span class="desc">댓글 추천 구독</span>
+							<span class="time">2022.05.10</span>
 							<button type="button" class="btn btn-xs btn-circle"><i class="fa fa-close" aria-hidden="true"></i></button>
 						</li>
 						<li>
 							<span class="name">Betty Kim</span>
-							<span class="desc">There are new settings available</span>
-							<span class="time">2019.03.15</span>
+							<span class="desc">222222222</span>
+							<span class="time">2022.05.11</span>
 							<button type="button" class="btn btn-xs btn-circle"><i class="fa fa-close" aria-hidden="true"></i></button>
 						</li>
 					</ul>
