--- a/board/src/main/resources/templates/board/view.html
+++ b/board/src/main/resources/templates/board/view.html
@@ -74,7 +74,7 @@
 							<button type="button" class="btn btn-xs btn-circle"><i class="fa fa-close" aria-hidden="true"></i></button>
 						</li>
 						<li>
-							<span class="name">Betty Kim</span>
+							<span class="name">손흥민</span>
 							<span class="desc">222222222</span>
 							<span class="time">2022.05.11</span>
 							<button type="button" class="btn btn-xs btn-circle"><i class="fa fa-close" aria-hidden="true"></i></button>
