--- a/board/src/main/resources/templates/board/list.html
+++ b/board/src/main/resources/templates/board/list.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="board/layout/basic">
 	<th:block layout:fragment="title">
-		<title>This page is a list page</title>
+		<title>this is list page</title>
 	</th:block>
 
 	<th:block layout:fragment="search">
@@ -45,6 +45,7 @@
 			</th:block>
 		</div>
 	</th:block>
+
 	<th:block layout:fragment="script">
 		<script th:inline="javascript">
 			/*<![CDATA[*/
