--- a/board/src/main/resources/templates/board/fragments/body.html
+++ b/board/src/main/resources/templates/board/fragments/body.html
@@ -3,7 +3,7 @@
 	<body th:fragment="main-body">
 		<div class="fixed-navbar">
 			<div class="pull-left">
-				<h1 class="page-title">Board</h1>
+				<h1 class="page-title">DH's 게시판</h1>
 			</div>
 		</div>
 		<!-- /.fixed-navbar -->
