create html for creating

--- a/board/src/main/resources/templates/board/view.html
+++ b/board/src/main/resources/templates/board/view.html
@@ -62,9 +62,12 @@
 
 				<form class="form-horizontal form-view">
 					<div class="input-group margin-bottom-20">
-						<input type="email" class="form-control" placeholder="">
-						<div class="input-group-btn"><button type="button" class="btn waves-effect waves-light"><i class="fa fa-commenting" aria-hidden="true"></i></button></div>
-						<!-- /.input-group-btn -->
+						<input type="text" id="content" class="form-control" />
+						<div class="input-group-btn">
+							<button type="button" class="btn waves-effect waves-light" th:onclick="insertComment([[ ${board.idx} ]])">
+							<i class="fa fa-commenting" aria-hidden="true"></i>
+							</button>
+						</div>
 					</div>
 					<ul class="notice-list"></ul>
 				</form>
@@ -100,6 +103,41 @@
 					$("body").append(html);
 					document.dataForm.submit();
 				}
+			}
+			
+			function insertComment(boardIdx) {
+
+				var content = document.getElementById("content");
+				if (isEmpty(content.value) == true) {
+					content.setAttribute("placeholder", "댓글을 입력해 주세요.");
+					content.focus();
+					return false;
+				}
+
+				var uri = /*[[ @{/comments} ]]*/;
+				var headers = {"Content-Type": "application/json", "X-HTTP-Method-Override": "POST"};
+				var params = {"boardIdx": boardIdx, "content": content.value, "writer": "관리자"};
+
+				$.ajax({
+					url: uri,
+					type: "POST",
+					headers: headers,
+					dataType: "json",
+					data: JSON.stringify(params),
+					success: function(response) {
+						if (response.result == false) {
+							alert("댓글 등록에 실패하였습니다.");
+							return false;
+						}
+
+						printCommentList();
+						content.value = "";
+					},
+					error: function(xhr, status, error) {
+						alert("에러가 발생하였습니다.");
+						return false;
+					}
+				});
 			}
 
 			$(function() {
