--- a/board/src/main/resources/templates/board/view.html
+++ b/board/src/main/resources/templates/board/view.html
@@ -4,6 +4,37 @@
 		<title>this is view page</title>
 	</th:block>
 
+	<th:block layout:fragment="modal">
+		<div id="commentModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="commentModalLabel" aria-hidden="true">
+		    <div class="modal-dialog" role="document">
+		        <div class="modal-content">
+		            <div class="modal-header">
+		                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+		                <span aria-hidden="true">&times;</span>
+		                </button>
+		            </div>
+		            <div class="modal-body">
+		                <form>
+		                    <div class="form-group">
+		                        <label for="modalWriter" class="col-form-label">작성자</label>
+		                        <input type="text" id="modalWriter" class="form-control" placeholder="작성자를 입력해 주세요." />
+		                    </div>
+		                    <div class="form-group">
+		                        <label for="modalContent" class="col-form-label">내용</label>
+		                        <textarea id="modalContent" class="form-control" placeholder="내용을 입력해 주세요."></textarea>
+		                    </div>
+		                </form>
+		            </div>
+		            <div class="modal-footer">
+		                <button type="button" id="btnModalCancel" class="btn btn-default waves-effect waves-light" data-dismiss="modal">취소하기</button>
+		                <button type="button" id="btnCommentUpdate" class="btn btn-primary waves-effect waves-light" onclick="updateComment()">수정하기</button>
+		                <button type="button" id="btnCommentDelete" class="btn btn-danger waves-effect waves-light">삭제하기</button>
+		            </div>
+		        </div>
+		    </div>
+		</div>
+	</th:block>
+
 	<th:block layout:fragment="content">
 		<div class="card-content">
 			<form class="form-horizontal form-view" th:object="${board}">
@@ -104,6 +135,17 @@
 					document.dataForm.submit();
 				}
 			}
+
+			function openModal(idx, writer, content) {
+
+				$("#commentModal").modal("toggle");
+
+				document.getElementById("modalWriter").value = writer;
+				document.getElementById("modalContent").value = content;
+
+				document.getElementById("btnCommentUpdate").setAttribute("onclick", "updateComment("+ idx +")");
+				document.getElementById("btnCommentDelete").setAttribute("onclick", "deleteComment("+ idx +")");
+			}
 			
 			function insertComment(boardIdx) {
 
@@ -140,6 +182,37 @@
 				});
 			}
 
+			function updateComment(idx) {
+
+				var writer = document.getElementById("modalWriter");
+				var content = document.getElementById("modalContent");
+
+				var uri = [[ @{/comments/} ]] + idx;
+				var headers = {"Content-Type": "application/json", "X-HTTP-Method-Override": "PATCH"};
+				var params = {"idx": idx, "writer": writer.value, "content": content.value};
+
+				$.ajax({
+					url: uri,
+					type: "PATCH",
+					headers: headers,
+					dataType: "json",
+					data: JSON.stringify(params),
+					success: function(response) {
+						if (response.result == false) {
+							alert("댓글 수정에 실패하였습니다.");
+							return false;
+						}
+
+						printCommentList();
+						$("#commentModal").modal("hide");
+					},
+					error: function(xhr, status, error) {
+						alert("에러가 발생하였습니다.");
+						return false;
+					}
+				});
+			}
+
 			$(function() {
 				printCommentList();
 			});
@@ -158,7 +231,7 @@
 									<span class="name">${comment.writer}</span>
 									<span class="desc">${comment.content}</span>
 									<span class="time">${moment(comment.insertTime).format('YYYY-MM-DD HH:mm:ss')}</span>
-									<button type="button" class="btn btn-xs btn-circle"><i class="fa fa-close" aria-hidden="true"></i></button>
+									<button type="button" onclick="openModal(${comment.idx}, '${comment.writer}', '${comment.content}' )" class="btn btn-xs btn-circle"><i class="glyphicon glyphicon-pencil" aria-hidden="true"></i></button>
 								</li>
 							`;
 						});
